// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`forms list tests render forms list - gallery 1`] = `
<FormsList
  driver={MockedFormsListDriver {}}
  isEnvelopeConnectedToChannel={true}
>
  <div
    data-ouia-component-type="forms-list"
    data-ouia-safe={true}
  >
    <Split
      hasGutter={true}
    >
      <div
        className="pf-l-split pf-m-gutter"
      >
        <SplitItem>
          <div
            className="pf-l-split__item"
          >
            <MockedFormsListToolbar
              applyFilter={[Function]}
              filterFormNames={Array []}
              setFilterFormNames={[Function]}
            />
          </div>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <div
            className="pf-l-split__item pf-m-fill"
          />
        </SplitItem>
        <SplitItem
          style={
            Object {
              "padding": "20px",
            }
          }
        >
          <div
            className="pf-l-split__item"
            style={
              Object {
                "padding": "20px",
              }
            }
          >
            <ToggleGroup
              aria-label="switch view toggle group"
            >
              <div
                aria-label="switch view toggle group"
                className="pf-c-toggle-group"
                role="group"
              >
                <ToggleGroupItem
                  aria-label="table view icon button"
                  buttonId="tableView"
                  icon={
                    <BarsIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    />
                  }
                  isSelected={false}
                  key=".0"
                  onChange={[Function]}
                >
                  <div
                    className="pf-c-toggle-group__item"
                  >
                    <button
                      aria-label="table view icon button"
                      aria-pressed={false}
                      className="pf-c-toggle-group__button"
                      id="tableView"
                      onClick={[Function]}
                      type="button"
                    >
                      <ToggleGroupItemElement
                        variant="icon"
                      >
                        <span
                          className="pf-c-toggle-group__icon"
                        >
                          <BarsIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 448 512"
                              width="1em"
                            >
                              <path
                                d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                              />
                            </svg>
                          </BarsIcon>
                        </span>
                      </ToggleGroupItemElement>
                    </button>
                  </div>
                </ToggleGroupItem>
                <ToggleGroupItem
                  aria-label="card view icon button"
                  buttonId="cardsView"
                  icon={
                    <ThIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    />
                  }
                  isSelected={true}
                  key=".1"
                  onChange={[Function]}
                >
                  <div
                    className="pf-c-toggle-group__item"
                  >
                    <button
                      aria-label="card view icon button"
                      aria-pressed={true}
                      className="pf-c-toggle-group__button pf-m-selected"
                      id="cardsView"
                      onClick={[Function]}
                      type="button"
                    >
                      <ToggleGroupItemElement
                        variant="icon"
                      >
                        <span
                          className="pf-c-toggle-group__icon"
                        >
                          <ThIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                              />
                            </svg>
                          </ThIcon>
                        </span>
                      </ToggleGroupItemElement>
                    </button>
                  </div>
                </ToggleGroupItem>
              </div>
            </ToggleGroup>
          </div>
        </SplitItem>
      </div>
    </Split>
    <Divider>
      <hr
        className="pf-c-divider"
      />
    </Divider>
    <MockedFormsGallery
      driver={MockedFormsListDriver {}}
      formsData={
        Array [
          Object {
            "lastModified": 2020-07-11T18:30:00.000Z,
            "name": "form1",
            "type": "TSX",
          },
          Object {
            "lastModified": 2020-07-11T18:30:00.000Z,
            "name": "form2",
            "type": "HTML",
          },
        ]
      }
      isLoading={false}
    />
  </div>
</FormsList>
`;

exports[`forms list tests render forms list - table 1`] = `
<FormsList
  driver={MockedFormsListDriver {}}
  isEnvelopeConnectedToChannel={true}
>
  <div
    data-ouia-component-type="forms-list"
    data-ouia-safe={true}
  >
    <Split
      hasGutter={true}
    >
      <div
        className="pf-l-split pf-m-gutter"
      >
        <SplitItem>
          <div
            className="pf-l-split__item"
          >
            <MockedFormsListToolbar
              applyFilter={[Function]}
              filterFormNames={Array []}
              setFilterFormNames={[Function]}
            />
          </div>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <div
            className="pf-l-split__item pf-m-fill"
          />
        </SplitItem>
        <SplitItem
          style={
            Object {
              "padding": "20px",
            }
          }
        >
          <div
            className="pf-l-split__item"
            style={
              Object {
                "padding": "20px",
              }
            }
          >
            <ToggleGroup
              aria-label="switch view toggle group"
            >
              <div
                aria-label="switch view toggle group"
                className="pf-c-toggle-group"
                role="group"
              >
                <ToggleGroupItem
                  aria-label="table view icon button"
                  buttonId="tableView"
                  icon={
                    <BarsIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    />
                  }
                  isSelected={true}
                  key=".0"
                  onChange={[Function]}
                >
                  <div
                    className="pf-c-toggle-group__item"
                  >
                    <button
                      aria-label="table view icon button"
                      aria-pressed={true}
                      className="pf-c-toggle-group__button pf-m-selected"
                      id="tableView"
                      onClick={[Function]}
                      type="button"
                    >
                      <ToggleGroupItemElement
                        variant="icon"
                      >
                        <span
                          className="pf-c-toggle-group__icon"
                        >
                          <BarsIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 448 512"
                              width="1em"
                            >
                              <path
                                d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                              />
                            </svg>
                          </BarsIcon>
                        </span>
                      </ToggleGroupItemElement>
                    </button>
                  </div>
                </ToggleGroupItem>
                <ToggleGroupItem
                  aria-label="card view icon button"
                  buttonId="cardsView"
                  icon={
                    <ThIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    />
                  }
                  isSelected={false}
                  key=".1"
                  onChange={[Function]}
                >
                  <div
                    className="pf-c-toggle-group__item"
                  >
                    <button
                      aria-label="card view icon button"
                      aria-pressed={false}
                      className="pf-c-toggle-group__button"
                      id="cardsView"
                      onClick={[Function]}
                      type="button"
                    >
                      <ToggleGroupItemElement
                        variant="icon"
                      >
                        <span
                          className="pf-c-toggle-group__icon"
                        >
                          <ThIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                              />
                            </svg>
                          </ThIcon>
                        </span>
                      </ToggleGroupItemElement>
                    </button>
                  </div>
                </ToggleGroupItem>
              </div>
            </ToggleGroup>
          </div>
        </SplitItem>
      </div>
    </Split>
    <Divider>
      <hr
        className="pf-c-divider"
      />
    </Divider>
    <MockedFormsTable
      driver={MockedFormsListDriver {}}
      formsData={Array []}
      isLoading={true}
      setFormsData={[Function]}
    />
  </div>
</FormsList>
`;
